@@ -22,7 +22,7 @@ plugins {
     id "org.springframework.boot" version "${spring_boot_version}"
     id "com.google.cloud.tools.jib" version "2.8.0"
     id "com.github.node-gradle.node" version "3.0.1"
-    id "com.diffplug.spotless" version "5.11.0"
+    id "com.diffplug.spotless" version "5.11.1"
     // this allows us to find outdated dependencies via ./gradlew dependencyUpdates
     id "com.github.ben-manes.versions" version "0.38.0"
 }
@@ -86,6 +86,7 @@ test {
     }
     testLogging.showStandardStreams = true
     reports.html.enabled = false
+    jvmArgs "--illegal-access=warn"
 }
 
 task integrationTest(type: Test) {
@@ -99,7 +100,7 @@ task integrationTest(type: Test) {
     }
 
     maxHeapSize = "1024m"
-    jvmArgs "-XX:MaxPermSize=512m"
+    jvmArgs "-XX:MaxPermSize=512m --illegal-access=warn"
     reports.html.enabled = false
 }
 
@@ -146,7 +147,7 @@ jacocoTestCoverageVerification {
                 counter = "INSTRUCTION"
                 value = "COVEREDRATIO"
                 // TODO: in the future the following value should become at least 0.90
-                minimum = 0.85
+                minimum = 0.86
             }
             limit {
                 counter = "CLASS"
@@ -240,7 +241,7 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.3"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.13.RELEASE"
 
-    implementation "io.netty:netty-all:4.1.60.Final"
+    implementation "io.netty:netty-all:4.1.62.Final"
     implementation "io.projectreactor.netty:reactor-netty:1.0.5"
     implementation "org.springframework:spring-messaging:5.3.5"
 
@@ -249,7 +250,7 @@ dependencies {
     implementation "org.springframework.security:spring-security-web:${spring_security_version}"
     implementation "org.springframework.security:spring-security-messaging:${spring_security_version}"
     implementation "org.springframework.security:spring-security-ldap:${spring_security_version}"
-    implementation "org.xmlbeam:xmlprojector:1.4.18"
+    implementation "org.xmlbeam:xmlprojector:1.4.19"
     implementation "io.jsonwebtoken:jjwt-api:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
@@ -288,7 +289,7 @@ dependencies {
     testImplementation "com.h2database:h2:1.4.200"
     testImplementation "org.awaitility:awaitility:4.0.3"
     testImplementation "org.apache.maven.shared:maven-invoker:3.1.0"
-    testImplementation "org.apache.maven.surefire:surefire-report-parser:2.22.2"
+    testImplementation "org.apache.maven.surefire:surefire-report-parser:3.0.0-M5"
 
     // Lightweight JSON library needed for the internals of the MockRestServiceServer
     testImplementation "org.json:json:20210307"
@@ -339,7 +340,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.8.3"
+    gradleVersion = "7.0-rc-1"
 }
 
 task stage(dependsOn: "bootWar") {
